--- a/src/main/resources/pt/it/av/atnog/csb/paas/manager/pm-ptin.properties
+++ b/src/main/resources/pt/it/av/atnog/csb/paas/manager/pm-ptin.properties
@@ -20,5 +20,5 @@ pm_info_getappinfo_uri=/info/apps/{0}
 #pm_info_getapplistinfo_uri=/info/getapplistinfo
 pm_info_getserviceinfo_uri=/info/services/{0}/{1}/info
 #pm_info_getservicelistinfo_uri=/info/getservicelistinfo
-pm_info_getapplogs_uri=/info/getapplogs/{0}
+pm_info_getapplogs_uri=/info/apps/{0}/logs
 pm_info_getpaas_uri=/info/paas/offering
