Lots of heavy work
Work includes:
    - Rule engine
    - Compliant with the latest version of PaaS Manager
    - New manifest format (XML and JSON)
    - Lots of fixes

Sorry for this huge bulk of changes all in on single commit...

--- a/pom.xml
+++ b/pom.xml
@@ -69,29 +69,23 @@
 	</repositories>
 
 	<dependencies>
-	
 		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.10</version>
+			<groupId>swiprolog</groupId>
+			<artifactId>jpl</artifactId>
+			<version>6.0.2</version>
+			<scope>compile</scope>
 		</dependency>
-	
-<!-- 		<dependency> -->
-<!-- 	      <groupId>org.codehaus.enunciate</groupId> -->
-<!-- 	      <artifactId>enunciate-rt</artifactId> -->
-<!-- 	      <version>1.25</version> -->
-<!-- 	    </dependency> -->
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.codehaus.enunciate</groupId> -->
-<!-- 			<artifactId>maven-enunciate-plugin</artifactId> -->
-<!-- 			<version>1.25</version> -->
-<!-- 		</dependency> -->
-		
 		<!-- <dependency> -->
-		<!-- <groupId>org.apache.deltacloud.client</groupId> -->
-		<!-- <artifactId>client</artifactId> -->
-		<!-- <version>0.2.0-SNAPSHOT</version> -->
+		<!-- <groupId>org.codehaus.enunciate</groupId> -->
+		<!-- <artifactId>enunciate-rt</artifactId> -->
+		<!-- <version>1.25</version> -->
+		<!-- </dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.codehaus.enunciate</groupId> -->
+		<!-- <artifactId>maven-enunciate-plugin</artifactId> -->
+		<!-- <version>1.25</version> -->
 		<!-- </dependency> -->
 
 		<!-- MySQL -->
@@ -157,7 +151,7 @@
 			<type>jar</type>
 			<version>1.0-beta-8</version>
 		</dependency>
- 
+
 		<!-- RestEasy JAXB -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -179,12 +173,12 @@
 		</dependency>
 
 		<!-- RestEasy Jettison -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.jboss.resteasy</groupId> -->
-<!-- 			<artifactId>resteasy-jettison-provider</artifactId> -->
-<!-- 			<scope>provided</scope> -->
-<!-- 		</dependency> -->
-		
+		<!-- <dependency> -->
+		<!-- <groupId>org.jboss.resteasy</groupId> -->
+		<!-- <artifactId>resteasy-jettison-provider</artifactId> -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
+
 		<!-- RestEasy core library -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -216,40 +210,40 @@
 		<!-- Maven will append the version to the finalName (which is the name 
 			given to the generated war, and hence the context root) -->
 		<finalName>${project.artifactId}</finalName>
-		
+
 		<plugins>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.codehaus.enunciate</groupId> -->
-<!-- 				<artifactId>maven-enunciate-plugin</artifactId> -->
-<!-- 				<version>1.25</version> -->
-<!-- 				<configuration> -->
-<!-- 					<configFile>enunciate.xml</configFile> -->
-<!-- 				</configuration> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<goals> -->
-<!-- 							<goal>assemble</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
-			
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.codehaus.cargo</groupId> -->
-<!-- 				<artifactId>cargo-maven2-plugin</artifactId> -->
-<!-- 				<version>1.1.2</version> -->
-<!-- 				<configuration> -->
-<!-- 					<configuration> -->
-<!-- 						<deployables> -->
-<!-- 							<deployable> -->
-<!-- 								<properties> -->
-<!-- 									<context>${project.artifactId}</context> -->
-<!-- 								</properties> -->
-<!-- 							</deployable> -->
-<!-- 						</deployables> -->
-<!-- 					</configuration> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.codehaus.enunciate</groupId> -->
+			<!-- <artifactId>maven-enunciate-plugin</artifactId> -->
+			<!-- <version>1.25</version> -->
+			<!-- <configuration> -->
+			<!-- <configFile>enunciate.xml</configFile> -->
+			<!-- </configuration> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <goals> -->
+			<!-- <goal>assemble</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
+
+			<!-- <plugin> -->
+			<!-- <groupId>org.codehaus.cargo</groupId> -->
+			<!-- <artifactId>cargo-maven2-plugin</artifactId> -->
+			<!-- <version>1.1.2</version> -->
+			<!-- <configuration> -->
+			<!-- <configuration> -->
+			<!-- <deployables> -->
+			<!-- <deployable> -->
+			<!-- <properties> -->
+			<!-- <context>${project.artifactId}</context> -->
+			<!-- </properties> -->
+			<!-- </deployable> -->
+			<!-- </deployables> -->
+			<!-- </configuration> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 
 			<!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
 				processors -->
@@ -261,7 +255,7 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
@@ -270,7 +264,7 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-			
+
 			<!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
 			<!-- To use, set the JBOSS_HOME environment variable and run: mvn package 
 				jboss-as:deploy -->
@@ -280,10 +274,11 @@
 				<version>7.1.0.Final</version>
 			</plugin>
 		</plugins>
-		
+
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
