--- a/src/main/resources/pt/it/av/atnog/csb/paas/manager/pm-ptin.properties
+++ b/src/main/resources/pt/it/av/atnog/csb/paas/manager/pm-ptin.properties
@@ -2,23 +2,27 @@
 pm_server_uri=http\://fog.av.it.pt\:8080/paasmanager/v1
 
 # Apps
-pm_apps_createapp_uri=/apps/createapp/{0}/{1}?appFramework={2}
-pm_apps_deployapp_uri=/apps/deployapp
-pm_apps_startapp_uri=/apps/startapp/{0}
-pm_apps_stopapp_uri=/apps/stopapp/{0}
-pm_apps_restartapp_uri=/apps/restartapp/{0}
-pm_apps_deleteapp_uri=/apps/deleteapp/{0}
-pm_apps_scaleapp_uri=/apps/scaleapp/{0}?appInstances={1}
+pm_apps_createapp_uri=/mgmt/apps/create/{0}/{1}?appFramework={2}
+pm_apps_deployapp_uri=/mgmt/apps/deploy
+pm_apps_startapp_uri=/mgmt/apps/start/{0}
+pm_apps_stopapp_uri=/mgmt/apps/stop/{0}
+pm_apps_restartapp_uri=/mgmt/apps/restart/{0}
+pm_apps_deleteapp_uri=/mgmt/apps/delete/{0}
+pm_apps_scaleapp_uri=/mgmt/apps/scale/{0}?appInstances={1}
+pm_apps_migrateapp_uri=/mgmt/apps/migrate/{0}/{1}
 
 # Service
-pm_service_create_uri=/apps/createservice/{0}/{1}?serviceVendor={2}
-pm_service_delete_uri=/apps/deleteservice/{0}/{1}
+pm_service_create_uri=/mgmt/services/create/{0}/{1}?serviceVendor={2}
+pm_service_delete_uri=/mgmt/services/delete/{0}/{1}
+pm_service_info_uri=/info/services/{0}/{1}
+pm_services_info_app_uri=/info/services/apps/{0}/list
 
 # Info
 pm_info_getappstatus_uri=/info/apps/{0}/status
 pm_info_getappinfo_uri=/info/apps/{0}
+pm_info_app_statistics_uri=/info/apps/{0}/statistics?period={1}
 #pm_info_getapplistinfo_uri=/info/getapplistinfo
-pm_info_getserviceinfo_uri=/info/services/{0}/{1}/info
+#pm_info_getserviceinfo_uri=/info/services/{0}/{1}/info
 #pm_info_getservicelistinfo_uri=/info/getservicelistinfo
 pm_info_getapplogs_uri=/info/apps/{0}/logs
 pm_info_getpaas_uri=/info/paas/offering
