OAuth, ACM2, VM instances provisioning via IM, bug fixes

--- a/src/main/resources/pm-ptin.properties
+++ b/src/main/resources/pm-ptin.properties
@@ -1,5 +1,5 @@
 # PaaS Manager server URI
-pm_server_uri=http\://fog.av.it.pt\:8080/paasmanager/v1
+pm_server_uri=http\://10.115.1.19\:8080/paasmanager/v1
 
 # Apps
 pm_apps_createapp_uri=/mgmt/apps/create/{0}/{1}?appFramework={2}
@@ -26,3 +26,6 @@ pm_info_app_statistics_uri=/info/apps/{0}/statistics?period={1}
 #pm_info_getservicelistinfo_uri=/info/getservicelistinfo
 pm_info_getapplogs_uri=/info/apps/{0}/logs
 pm_info_getpaas_uri=/info/paas/offering
+
+pm_register_paas_uri=/mgmt/paas/create
+pm_update_paas_uri=/mgmt/paas/update
