--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,35 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
+
 	<display-name>Restful Web Application</display-name>
+
+	<context-param>
+		<param-name>resteasy.role.based.security</param-name>
+		<param-value>true</param-value>
+	</context-param>
+
 	<context-param>
 		<param-name>resteasy.scan</param-name>
 		<param-value>true</param-value>
 	</context-param>
+
 	<context-param>
 		<param-name>resteasy.servlet.mapping.prefix</param-name>
 		<param-value>/rest</param-value>
 	</context-param>
+
 	<context-param>
-        <param-name>resteasy.media.type.mappings</param-name>
-        <param-value>html : text/html, json : application/json, xml : application/xml, yaml : text/x-yaml</param-value>
-    </context-param>
+		<param-name>resteasy.media.type.mappings</param-name>
+		<param-value>html : text/html, json : application/json, xml : application/xml</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>oauth.provider.provider-class</param-name>
+		<param-value>pt.it.av.atnog.csb.auth.oauth.CsbOAuthProviderImpl</param-value>
+	</context-param>
+
 	<listener>
-		<listener-class>
-			org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
+		<listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
 	</listener>
+
 	<servlet>
 		<servlet-name>resteasy-servlet</servlet-name>
-		<servlet-class>
-			org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+		<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
 	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>resteasy-servlet</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+
+	<!-- The OAuth Servlet handles token exchange -->
+	<servlet>
+		<servlet-name>OAuth</servlet-name>
+		<servlet-class>pt.it.av.atnog.csb.auth.oauth.CsbOAuthServlet</servlet-class>
+	</servlet>
+
+	<!-- This will be the base for the token exchange endpoint URL -->
+	<servlet-mapping>
+		<servlet-name>OAuth</servlet-name>
+		<url-pattern>/oauth/*</url-pattern>
+	</servlet-mapping>
+
+	<!-- The OAuth Filter handles authentication for protected resources -->
+	<filter>
+		<filter-name>BasicOrOAuth Filter</filter-name>
+		<filter-class>pt.it.av.atnog.csb.auth.oauth.CsbBasicOrOAuthFilter</filter-class>
+	</filter>
+	
+	<filter>
+		<filter-name>BasicAuth Filter</filter-name>
+		<filter-class>pt.it.av.atnog.csb.auth.oauth.CsbBasicAuthFilter</filter-class>
+	</filter>
+
+	<!-- This defines the URLs which should require OAuth authentication for your protected resources -->
+	<filter-mapping>
+		<filter-name>BasicOrOAuth Filter</filter-name>
+		<url-pattern>/rest/*</url-pattern>
+	</filter-mapping>
+	
+	<filter-mapping>
+		<filter-name>BasicAuth Filter</filter-name>
+		<url-pattern>/oauth/authorize/*</url-pattern>
+	</filter-mapping>
 </web-app>
